config/clientservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client
spec:
  selector:
    matchLabels:
      app: client
  replicas: 1
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: user
          image: obiwan007/clientsrv:latest
          imagePullPolicy: "Always"
          resources:
            limits:
              memory: 512Mi
              cpu: 0.5
            requests:
              memory: 256Mi
              cpu: 0.5
          ports:
            - name: clientsrv
              containerPort: 10003

---
apiVersion: v1
kind: Service
metadata:
  name: clientsrv
spec:
  selector:
    app: client
  ports:
    - name: grpc
      port: 10003
  type: ClusterIP
