config/frontendservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: obiwan007/frontend:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 256Mi
          env:
            - name: GRAPHQL
              value: "http://gqlsrv:8090"
            - name: GQLSRV
              value: "gqlsrv"
            - name: ZIPKIN
              value: "http://zipkin:9411"
          ports:
            - name: http
              containerPort: 80
            - name: frontendport
              containerPort: 443

---
# apiVersion: v1
# kind: Service
# metadata:
#   name: frontend
#   annotations:
#     dev.okteto.com/auto-ingress: "true"
# spec:
#   selector:
#     app: frontend
#   ports:
#     - name: http
#       port: 3000
#   type: NodePort

apiVersion: v1
kind: Service
metadata:
  name: frontend
  annotations:
    dev.okteto.com/auto-ingress: "true"
spec:
  #  type: NodePort
  type: ClusterIP
  ports:
    - name: frontendhttp
      port: 80
    - name: frontend
      port: 443
  selector:
    app: frontend
