config/gqlservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: obiwan007/gqlsrv:latest
          imagePullPolicy: "Always"
          envFrom:
            - secretRef:
                name: mysecret
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 256Mi
          ports:
            - name: graphqlport
              containerPort: 8090

---
apiVersion: v1
kind: Service
metadata:
  name: gqlsrv
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 8090
      targetPort: graphqlport
