config/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: web-obiwan007.cloud.okteto.net
      http:
        paths:
          - path: /
            backend:
              serviceName: web
              servicePort: 3000
# apiVersion: v1
# kind: Service
# metadata:
#   name: new
#   namespace: obiwan007
#   selfLink: /api/v1/namespaces/obiwan007/services/new
#   uid: 8058647a-de2d-4b1f-814d-bab679bf8bcb
#   resourceVersion: "349592944"
#   creationTimestamp: 2020-04-22T12:45:22Z
#   labels:
#     app: myapp
# spec:
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 3000
#   selector:
#     app: api
#   type: ClusterIP
#   sessionAffinity: None
# status:
#   loadBalancer: {}
