config/projectservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-deployment
  labels:
    app: project
spec:
  selector:
    matchLabels:
      app: project
  replicas: 1
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
        - name: user
          image: obiwan007/projectsrv:latest
          envFrom:
            - secretRef:
                name: mysecret
          imagePullPolicy: "Always"
          resources:
            limits:
              cpu: 0.1
              memory: 512Mi
            requests:
              cpu: 0.1
              memory: 256Mi
          ports:
            - name: projectsrv
              containerPort: 10002

---
apiVersion: v1
kind: Service
metadata:
  name: projectsrv
spec:
  selector:
    app: project
  ports:
    - name: grpc
      port: 10002
  type: ClusterIP
