config/userservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  labels:
    app: user
spec:
  selector:
    matchLabels:
      app: user
  replicas: 1
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: obiwan007/usersrv:latest
          imagePullPolicy: "Always"
          resources:
            limits:
              memory: 512Mi
              cpu: 0.5
            requests:
              memory: 256Mi
              cpu: 0.5
          ports:
            - name: usersrv
              containerPort: 10000

---
apiVersion: v1
kind: Service
metadata:
  name: usersrv
spec:
  selector:
    app: user
  ports:
    - name: grpc
      port: 10000
  type: ClusterIP
