config/zipkin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
spec:
  selector:
    matchLabels:
      app: zipkin
  replicas: 1
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: jaegertracing/all-in-one:1.17
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 256Mi
          ports:
            - containerPort: 9411
            - containerPort: 16686
          env:
            - name: COLLECTOR_ZIPKIN_HTTP_PORT
              value: "9411"

---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
spec:
  selector:
    app: zipkin
  ports:
    - name: http
      port: 16686
    - name: zipkin
      port: 9411
  type: NodePort
